Add database write

--- a/resource/config/config.properties
+++ b/resource/config/config.properties
@@ -1,5 +1,5 @@
-host=127.0.0.1
+host=192.168.0.226
 username=bill_scrapper
-password=password
+password=cZbdwprmGUC7zWmh
 port=3306
 database=bill_scrapper
