--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/java-bill-scrapper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.pdfbox-app-2.0.0.jar=C:\\Users\\anthony.poon\\Downloads\\pdfbox-app-2.0.0.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=vendor\\mysql-connector-java-5.1.38-bin.jar
+file.reference.pdfbox-app-2.0.0.jar=vendor/pdfbox-app-2.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.pdfbox-app-2.0.0.jar}
+    ${file.reference.pdfbox-app-2.0.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
